--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "consolidate": "^0.16.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "pug": "^3.0.2",
-    "sequelize": "^6.21.3",
-    "swig": "^0.14.0"
+    "sequelize": "^6.21.3"
   }
 }
